Fix spacing for intro section

--- a/_src/styles/custom/_globals.scss
+++ b/_src/styles/custom/_globals.scss
@@ -20,9 +20,9 @@
 // Spacing
 $spacing-xs: unitSize(1);
 $spacing-s:  unitSize(2);
-$spacing-m:  unitSize(3);
-$spacing-l:  unitSize(4);
-$spacing-xl: unitSize(5);
+$spacing-m:  unitSize(4);
+$spacing-l:  unitSize(6);
+$spacing-xl: unitSize(8);
 
 
 //
